--- a/build.gradle
+++ b/build.gradle
@@ -200,7 +200,7 @@ minecraft {
 
     if(usesMixins.toBoolean()) {
         arguments += [
-                "--mods=../build/libs/$modId-${version}.jar",
+                "--mods=../build/libs/$modId-${version}.jar".toString(),
                 "--tweakClass org.spongepowered.asm.launch.MixinTweaker"
         ]
         jvmArguments += [
