--- a/gradle.properties
+++ b/gradle.properties
@@ -45,11 +45,11 @@ developmentEnvironmentUserName = Developer
 # The string's content will be replaced with your mods version when compiled. You should use this to specify your mod's
 # version in @Mod([...], version = VERSION, [...])
 # Leave these properties empty to skip individual token replacements
-replaceGradleTokenInFile = Tags.java
-gradleTokenModId = GRADLETOKEN_MODID
-gradleTokenModName = GRADLETOKEN_MODNAME
-gradleTokenVersion = GRADLETOKEN_VERSION
-gradleTokenGroupName = GRADLETOKEN_GROUPNAME
+replaceGradleTokenInFile =
+gradleTokenModId =
+gradleTokenModName =
+gradleTokenVersion =
+gradleTokenGroupName =
 
 # In case your mod provides an API for other mods to implement you may declare its package here. Otherwise, you can
 # leave this property empty.
@@ -63,9 +63,9 @@ accessTransformersFile =
 # Provides setup for Mixins if enabled. If you don't know what mixins are: Keep it disabled!
 usesMixins = true
 # Specify the location of your implementation of IMixinConfigPlugin. Leave it empty otherwise.
-mixinPlugin = jarloader.MixinPlugin
+mixinPlugin = jarloader.plugin.MixinPlugin
 # Specify the package that contains all of your Mixins. You may only place Mixins in this package or the build will fail!
-mixinsPackage = jarloader.mixins
+mixinsPackage = jarloader
 # Specify the core mod entry class if you use a core mod. This class must implement IFMLLoadingPlugin!
 # This parameter is for legacy compatibility only
 # Example value: coreModClass = asm.FMLPlugin + modGroup = com.myname.mymodid -> com.myname.mymodid.asm.FMLPlugin
